[gd_scene load_steps=10 format=3 uid="uid://1i70g38wi3g4"]

[ext_resource type="Script" path="res://UI/Start_screen/start_page.gd" id="1_3she4"]
[ext_resource type="Texture2D" uid="uid://c3fyh5ahew5pq" path="res://background/MainMenuBackground/background_layer_1.png" id="3_j4ivd"]
[ext_resource type="Texture2D" uid="uid://flbx6ccthuga" path="res://player/Knight/Idle-export-no-outline.png" id="3_kh2o1"]
[ext_resource type="Texture2D" uid="uid://bylnqxc2l4ukx" path="res://background/MainMenuBackground/background_layer_2.png" id="4_li13n"]
[ext_resource type="Texture2D" uid="uid://ccfh3yvargxeq" path="res://player/Knight/Idle-export.png" id="4_tywbu"]
[ext_resource type="Texture2D" uid="uid://dyupau52ockp3" path="res://background/MainMenuBackground/background_layer_3.png" id="5_hxv22"]
[ext_resource type="Texture2D" uid="uid://stuu354lbsox" path="res://player/Archer/ArcherNoOutline.png" id="7_t44mm"]
[ext_resource type="Texture2D" uid="uid://jppwky10kjtu" path="res://player/Archer/ArcherOutline.png" id="8_nv0yl"]
[ext_resource type="Theme" uid="uid://c6gu8naksfhex" path="res://Font/Crang.tres" id="10_qwrlc"]

[node name="Start_Page" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3she4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxLayer" type="ParallaxBackground" parent="TextureRect"]
scroll_base_scale = Vector2(0.9, 1)

[node name="ParallaxLayer" type="ParallaxLayer" parent="TextureRect/ParallaxLayer"]

[node name="Sprite2D" type="Sprite2D" parent="TextureRect/ParallaxLayer/ParallaxLayer"]
position = Vector2(240, 135)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_j4ivd")

[node name="Sprite2D2" type="Sprite2D" parent="TextureRect/ParallaxLayer/ParallaxLayer"]
position = Vector2(240, 135)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_li13n")

[node name="Sprite2D3" type="Sprite2D" parent="TextureRect/ParallaxLayer/ParallaxLayer"]
position = Vector2(240, 135)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_hxv22")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -126.0
offset_right = 96.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0

[node name="btn_Knight_Charater" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 103.0
texture_normal = ExtResource("3_kh2o1")
texture_pressed = ExtResource("4_tywbu")
texture_hover = ExtResource("4_tywbu")
texture_focused = ExtResource("4_tywbu")
stretch_mode = 0

[node name="btn_SpaceWoman_Character" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 111.0
offset_top = 6.0
offset_right = 180.0
offset_bottom = 107.0
texture_normal = ExtResource("7_t44mm")
texture_pressed = ExtResource("8_nv0yl")
texture_hover = ExtResource("8_nv0yl")
texture_focused = ExtResource("8_nv0yl")
stretch_mode = 0

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 11.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
theme = ExtResource("10_qwrlc")
text = "The Most Epic
Platformer"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.5
offset_top = 97.0
offset_right = 41.5
offset_bottom = 122.0
grow_horizontal = 2
theme = ExtResource("10_qwrlc")
text = "PLAY"

[connection signal="pressed" from="Panel/btn_Knight_Charater" to="." method="_on_btn_knight_charater_pressed"]
[connection signal="pressed" from="Panel/btn_SpaceWoman_Character" to="." method="_on_btn_space_woman_character_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
